--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,33 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Warnes&display=swap');
+.logoDDW{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: 'Warnes', cursive;
+  /* font-family: 'Mr Bedfort', cursive; */
   color: white;
+  font-size: 500%;
+  font-weight: lighter;
+ position: absolute;
+ top: 30%;
+ left: 42%;
+}
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+.fontstyle{
+  font-family: 'Playfair Display', serif;
+}
+.fontstyleInsideCard{
+  font-family: 'Open Sans', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logoDDWhead{
+ font-family: 'Warnes', cursive;
+ color: white;
+ font-size: 200%;
+ font-weight: lighter;
+ position: fixed;
+ z-index: 1100;
+ top: 1%;
+ left: 90%;
 }
 .box {
   width: 150px;
@@ -49,8 +41,12 @@
 }
 .num{
   color: white;
-  font-size: 100%;
+  font-size: 150%;
   margin-left: 63%
+}
+.fontstylesaudi{
+  font-size: 110%;
+  font-family: 'Playfair Display', serif;
 }
 .sidebar {
   position: relative;
@@ -161,6 +157,7 @@
   cursor: pointer;
 }
 .link {
+  font-family: 'Playfair Display', serif;
   font-size:  150%;
   color: rgba(255, 255, 255, 0.397);
   text-decoration: none;
@@ -170,6 +167,7 @@
 }
 
 .link1 {
+  font-family: 'Playfair Display', serif;
   font-size:  150%;
   color: rgba(255, 255, 255, 0.397);
   text-decoration: none;
@@ -319,7 +317,7 @@ text-orientation: mixed;
 .imgLandpage{
   display: block;
   border-radius: 50%;
-  width:80%;
+  width:0%;
   
   margin-left: auto;
   margin-right: auto;
@@ -366,6 +364,16 @@ text-orientation: mixed;
   margin-bottom: 4%;
 
 }
+.divider{
+  color: white;
+}
+.DDw{
+  font-family: 'Playfair Display', serif;
+  width: 17%;
+  display: inline;
+  font-size: 240%;
+}
+
 .prtimgUser{
  
   height: 825px;
@@ -430,6 +438,7 @@ text-orientation: mixed;
  
   height: 825px;
   width: 1800px;
+  
  
 }
 
