--- a/src/Atho/Atho.css
+++ b/src/Atho/Atho.css
@@ -53,6 +53,14 @@
   left: 40%;
   
 }
+.bot1{
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0);
+  color: rgba(255, 255, 255, 0.664);
+  border: 2px solid rgba(255, 255, 255, 0.424);
+  padding: 10px 26px;
+  left: 3%; 
+}
 
 .bot:hover{
     position: absolute;
@@ -66,9 +74,17 @@
 .md-form label{
 color: white !important ;
 size: 90%;
+font-size: 80%;
 }
-
-
+.form-control{
+    color: white !important ;  
+}
+.md-form{
+    color: white !important ;  
+}
+.body {
+    color: white !important ; 
+}
 
 
 
