--- a/src/App.css
+++ b/src/App.css
@@ -443,3 +443,20 @@ text-orientation: mixed;
 }
 
 }
+.md-form input ,.md-form label {
+  color :black!important 
+}
+::ng-deep .mat-focused .mat-form-field-label {
+  /*change color of label*/
+  color: green !important;
+ }
+
+ ::ng-deep.mat-form-field-underline {
+  /*change color of underline*/
+  background-color: green !important;
+} 
+
+::ng-deep.mat-form-field-ripple {
+ /*change color of underline when focused*/
+ background-color: green !important;;
+}
