--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,13 @@
 }
 
 .side-nav a:hover {
-  color: #f1f1f1;
+ 
+  color: #033b37;
+  
+  font-size: 1.9rem;
+
+
+  
 }
 
 .side-nav .close-nav {
@@ -446,17 +452,6 @@ text-orientation: mixed;
 .md-form input ,.md-form label {
   color :black!important 
 }
-::ng-deep .mat-focused .mat-form-field-label {
-  /*change color of label*/
-  color: green !important;
- }
-
- ::ng-deep.mat-form-field-underline {
-  /*change color of underline*/
-  background-color: green !important;
-} 
-
-::ng-deep.mat-form-field-ripple {
- /*change color of underline when focused*/
- background-color: green !important;;
+.md-form textarea.md-textarea{
+  color :black!important 
 }
