--- a/src/Components/styless.css
+++ b/src/Components/styless.css
@@ -59,7 +59,7 @@ header section .logo {
 		top: 50%;
 		transform: translateY(-50%);
 		z-index: 10;
-		background: url('http://svgshare.com/i/41_.svg') no-repeat center center / 16px;
+		background: url('https://svgshare.com/i/41_.svg') no-repeat center center / 16px;
 		width: 32px;
 		height: 32px;
 		text-indent: -9999px;
