--- a/src/App.css
+++ b/src/App.css
@@ -205,7 +205,7 @@
 
 /* .react-simple-parallax-bg is generate by the component */
 .section .react-simple-parallax-bg {
-  background-image: url('https://tinyurl.com/zaz7bp4');
+  background-image: url('http://tinyurl.com/zaz7bp4');
   height: 750px;
 }
 
